upload the problem statement for the guided capstone set

--- a/Case_Study/Unit4_London_Housing/Unit 4 Challenge - Tier 3.ipynb
+++ b/Case_Study/Unit4_London_Housing/Unit 4 Challenge - Tier 3.ipynb
@@ -3149,6 +3149,315 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>London_Borough</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Average_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Kensington &amp; Chelsea</td>\n",
+       "      <td>E09000020</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>182694.83260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Westminster</td>\n",
+       "      <td>E09000033</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>133025.27720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Hammersmith &amp; Fulham</td>\n",
+       "      <td>E09000013</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>124902.86020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Camden</td>\n",
+       "      <td>E09000007</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>120932.88810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Richmond upon Thames</td>\n",
+       "      <td>E09000027</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>109326.12450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Barnet</td>\n",
+       "      <td>E09000003</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>93284.51832</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Islington</td>\n",
+       "      <td>E09000019</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>92516.48557</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Wandsworth</td>\n",
+       "      <td>E09000032</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>88559.04381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Harrow</td>\n",
+       "      <td>E09000015</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>84769.52599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Merton</td>\n",
+       "      <td>E09000024</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>82070.61330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Bromley</td>\n",
+       "      <td>E09000006</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>81671.47692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Kingston upon Thames</td>\n",
+       "      <td>E09000021</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>80875.84843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Ealing</td>\n",
+       "      <td>E09000009</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>79885.89069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Haringey</td>\n",
+       "      <td>E09000014</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>76287.56947</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Hillingdon</td>\n",
+       "      <td>E09000017</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>73834.82964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Enfield</td>\n",
+       "      <td>E09000010</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>72514.69096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Hounslow</td>\n",
+       "      <td>E09000018</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>72231.70537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Redbridge</td>\n",
+       "      <td>E09000026</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>72189.58437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Sutton</td>\n",
+       "      <td>E09000029</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>71536.97357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Brent</td>\n",
+       "      <td>E09000005</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>71306.56698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Croydon</td>\n",
+       "      <td>E09000008</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>69158.16225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Havering</td>\n",
+       "      <td>E09000016</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>68000.13774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Southwark</td>\n",
+       "      <td>E09000028</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>67885.20344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Lambeth</td>\n",
+       "      <td>E09000022</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>67770.98843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Bexley</td>\n",
+       "      <td>E09000004</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>64958.09036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Greenwich</td>\n",
+       "      <td>E09000011</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>62300.10169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Waltham Forest</td>\n",
+       "      <td>E09000031</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>61319.44913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Hackney</td>\n",
+       "      <td>E09000012</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>61296.52637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Lewisham</td>\n",
+       "      <td>E09000023</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>60491.26109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Tower Hamlets</td>\n",
+       "      <td>E09000030</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>59865.18995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Newham</td>\n",
+       "      <td>E09000025</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>53539.31919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Barking &amp; Dagenham</td>\n",
+       "      <td>E09000002</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>50460.22660</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          London_Borough         ID      Month  Average_price\n",
+       "0   Kensington & Chelsea  E09000020 1995-01-01   182694.83260\n",
+       "1            Westminster  E09000033 1995-01-01   133025.27720\n",
+       "2   Hammersmith & Fulham  E09000013 1995-01-01   124902.86020\n",
+       "3                 Camden  E09000007 1995-01-01   120932.88810\n",
+       "4   Richmond upon Thames  E09000027 1995-01-01   109326.12450\n",
+       "5                 Barnet  E09000003 1995-01-01    93284.51832\n",
+       "6              Islington  E09000019 1995-01-01    92516.48557\n",
+       "7             Wandsworth  E09000032 1995-01-01    88559.04381\n",
+       "8                 Harrow  E09000015 1995-01-01    84769.52599\n",
+       "9                 Merton  E09000024 1995-01-01    82070.61330\n",
+       "10               Bromley  E09000006 1995-01-01    81671.47692\n",
+       "11  Kingston upon Thames  E09000021 1995-01-01    80875.84843\n",
+       "12                Ealing  E09000009 1995-01-01    79885.89069\n",
+       "13              Haringey  E09000014 1995-01-01    76287.56947\n",
+       "14            Hillingdon  E09000017 1995-01-01    73834.82964\n",
+       "15               Enfield  E09000010 1995-01-01    72514.69096\n",
+       "16              Hounslow  E09000018 1995-01-01    72231.70537\n",
+       "17             Redbridge  E09000026 1995-01-01    72189.58437\n",
+       "18                Sutton  E09000029 1995-01-01    71536.97357\n",
+       "19                 Brent  E09000005 1995-01-01    71306.56698\n",
+       "20               Croydon  E09000008 1995-01-01    69158.16225\n",
+       "21              Havering  E09000016 1995-01-01    68000.13774\n",
+       "22             Southwark  E09000028 1995-01-01    67885.20344\n",
+       "23               Lambeth  E09000022 1995-01-01    67770.98843\n",
+       "24                Bexley  E09000004 1995-01-01    64958.09036\n",
+       "25             Greenwich  E09000011 1995-01-01    62300.10169\n",
+       "26        Waltham Forest  E09000031 1995-01-01    61319.44913\n",
+       "27               Hackney  E09000012 1995-01-01    61296.52637\n",
+       "28              Lewisham  E09000023 1995-01-01    60491.26109\n",
+       "29         Tower Hamlets  E09000030 1995-01-01    59865.18995\n",
+       "30                Newham  E09000025 1995-01-01    53539.31919\n",
+       "31    Barking & Dagenham  E09000002 1995-01-01    50460.22660"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\" simple check which Borough has higher averge housing price \"\"\"\n",
+    "\n",
+    "prop_df.drop_duplicates(subset='London_Borough') \\\n",
+    "                .sort_values('Average_price', ascending=False).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
