--- a/Capstone_Guided/Notebooks/03_exploratory_data_analysis.ipynb
+++ b/Capstone_Guided/Notebooks/03_exploratory_data_analysis.ipynb
@@ -1109,7 +1109,7 @@
    "source": [
     "You may be starting to feel there's a bit of a problem here, or at least a challenge. You've constructed some potentially useful and business relevant features, derived from summary statistics, for each of the states you're concerned with. You've explored many of these features in turn and found various trends. Some states are higher in some but not in others. Some features will also be more correlated with one another than others.\n",
     "\n",
-    "One way to disentangle this interconnected web of relationships is via [principle components analysis](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html#sklearn.decomposition.PCA) (PCA). This technique will find linear combinations of the original features that are uncorrelated with one another and order them by the amount of variance they explain. You can use these derived features to visualize the data in a lower dimension (e.g. 2 down from 7) and know how much variance the representation explains. You can also explore how the original features contribute to these derived features."
+    "One way to disentangle this interconnected web of relationships is via [principle components analysis](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html#sklearn.decomposition.PCA) (PCA). **This technique will find linear combinations of the original features that are uncorrelated with one another and order them by the amount of variance they explain.** You can use these derived features to visualize the data in a lower dimension (e.g. 2 down from 7) and know how much variance the representation explains. You can also explore how the original features contribute to these derived features."
    ]
   },
   {
@@ -1732,19 +1732,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35\n"
+      "35\n",
+      "Index(['Alaska', 'Arizona', 'California', 'Colorado', 'Connecticut', 'Idaho',\n",
+      "       'Illinois', 'Indiana', 'Iowa', 'Maine', 'Maryland', 'Massachusetts',\n",
+      "       'Michigan', 'Minnesota', 'Missouri', 'Montana', 'Nevada',\n",
+      "       'New Hampshire', 'New Jersey', 'New Mexico', 'New York',\n",
+      "       'North Carolina', 'Ohio', 'Oregon', 'Pennsylvania', 'Rhode Island',\n",
+      "       'South Dakota', 'Tennessee', 'Utah', 'Vermont', 'Virginia',\n",
+      "       'Washington', 'West Virginia', 'Wisconsin', 'Wyoming'],\n",
+      "      dtype='object', name='state')\n"
      ]
     }
    ],
    "source": [
-    "print(len(state_summary_index))"
+    "print(len(state_summary_index))\n",
+    "print(state_summary_index)"
    ]
   },
   {
