Submit case study in Unit11.3

--- a/datacamp/notebook/Unit11.1_Statistical_Thinking_in_Python.ipynb
+++ b/datacamp/notebook/Unit11.1_Statistical_Thinking_in_Python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7d49fcf0",
+   "id": "1e4697b6",
    "metadata": {},
    "source": [
     "# Import packages and datasets"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0e5ba8ea",
+   "id": "ec60a739",
    "metadata": {},
    "outputs": [
     {
@@ -147,16 +147,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea5cbc73",
+   "metadata": {},
+   "source": [
+    "## pre-defined functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "29b39145",
+   "execution_count": 2,
+   "id": "2fd8c0ba",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ecdf(data):\n",
+    "    \"\"\"Compute ECDF for a one-dimensional array of measurements.\"\"\"\n",
+    "    # Number of data points: n\n",
+    "    n = len(data)\n",
+    "\n",
+    "    # x-data for the ECDF: x\n",
+    "    x = np.sort(data)\n",
+    "\n",
+    "    # y-data for the ECDF: y\n",
+    "    y = np.arange(1, len(x)+1) / n\n",
+    "\n",
+    "    return x, y"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "2a2cf121",
+   "id": "1a3623c4",
+   "metadata": {},
+   "source": [
+    "the Pearson correlation coefficient, also called the Pearson r, is often easier to interpret than the covariance. It is computed using the np.corrcoef() function. Like np.cov(), it takes two arrays as arguments and returns a 2D array. Entries [0,0] and [1,1] are necessarily equal to 1 (can you think about why?), and the value we are after is entry [0,1]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9eb5f2af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" Pearson correlation coefficient \"\"\"\n",
+    "def pearson_r(x, y):\n",
+    "    \"\"\"Compute Pearson correlation coefficient between two arrays.\"\"\"\n",
+    "    # Compute correlation matrix: corr_mat\n",
+    "    corr_mat = np.corrcoef(x,y)\n",
+    "\n",
+    "    # Return entry [0,1]\n",
+    "    return corr_mat[0,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6b17b8e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def perform_bernoulli_trials(n, p):\n",
+    "    \"\"\"Perform n Bernoulli trials with success probability p\n",
+    "    and return number of successes.\"\"\"\n",
+    "    # Initialize number of successes: n_success\n",
+    "    n_success = 0\n",
+    "\n",
+    "    # Perform trials\n",
+    "    for i in range(n):\n",
+    "        # Choose random number between zero and one: random_number\n",
+    "        random_nb = np.random.random()\n",
+    "\n",
+    "        # If less than p, it's a success so add one to n_success\n",
+    "        if random_nb < p:\n",
+    "            n_success += 1\n",
+    "\n",
+    "    return n_success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39bcc410",
    "metadata": {},
    "source": [
     "# Graphical Exploratory Data Analysis"
@@ -164,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36499f00",
+   "id": "c2ebb874",
    "metadata": {},
    "source": [
     "## manage the dataset"
@@ -172,8 +243,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "82b393f1",
+   "execution_count": 5,
+   "id": "fa78606f",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +336,7 @@
        "4     0.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,8 +356,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "2dbb8150",
+   "execution_count": 6,
+   "id": "194f8735",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +462,7 @@
        "4     0.0  setosa  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,15 +483,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "180e54c9",
+   "id": "c6b19ffe",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "31859ed7",
+   "execution_count": 7,
+   "id": "242b913d",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +589,7 @@
        "54     1.0  versicolor  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,8 +611,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "45500808",
+   "execution_count": 8,
+   "id": "86b6c411",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,8 +629,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "aa31e165",
+   "execution_count": 9,
+   "id": "51f5c94e",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +662,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "107aab1e",
+   "id": "be1e4e35",
    "metadata": {},
    "source": [
     "## Bee Swarm plot"
@@ -599,8 +670,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "571f04c7",
+   "execution_count": 10,
+   "id": "542a12c5",
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +680,7 @@
        "Text(0, 0.5, 'petal length (cm)')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -636,14 +707,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "055b504b",
+   "id": "f603d7b0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "57e8607c",
+   "id": "0530a21d",
    "metadata": {},
    "source": [
     "## Empirical cumulative distribution function (ECDF) "
@@ -651,29 +722,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "a448dd88",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def ecdf(data):\n",
-    "    \"\"\"Compute ECDF for a one-dimensional array of measurements.\"\"\"\n",
-    "    # Number of data points: n\n",
-    "    n = len(data)\n",
-    "\n",
-    "    # x-data for the ECDF: x\n",
-    "    x = np.sort(data)\n",
-    "\n",
-    "    # y-data for the ECDF: y\n",
-    "    y = np.arange(1, len(x)+1) / n\n",
-    "\n",
-    "    return x, y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "7cf945ea",
+   "execution_count": 11,
+   "id": "dc41ce0e",
    "metadata": {},
    "outputs": [
     {
@@ -708,14 +758,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f4172e9",
+   "id": "08128de1",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "09025fb2",
+   "id": "e5e12472",
    "metadata": {},
    "source": [
     "# Quantitative Exploratory Data Analysis"
@@ -723,8 +773,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "ceb3a51e",
+   "execution_count": 12,
+   "id": "d806972e",
    "metadata": {},
    "outputs": [
     {
@@ -748,8 +798,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "854bd274",
+   "execution_count": 13,
+   "id": "b6cc8a8b",
    "metadata": {},
    "outputs": [
     {
@@ -780,8 +830,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "cc57edd9",
+   "execution_count": 14,
+   "id": "bcc2c804",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +859,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a014691",
+   "id": "41f15d32",
    "metadata": {},
    "source": [
     "### Variance and Covariance"
@@ -817,8 +867,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "3245d069",
+   "execution_count": 15,
+   "id": "88d55f78",
    "metadata": {},
    "outputs": [
     {
@@ -845,14 +895,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03e8cc28",
+   "id": "3bcab7a5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "bf7495dd",
+   "id": "707b0c32",
    "metadata": {},
    "source": [
     "The covariance may be computed using the Numpy function np.cov(). For example, we have two sets of data x and y, np.cov(x, y) returns a 2D array where entries [0,1] and [1,0] are the covariances. Entry [0,0] is the variance of the data in x, and entry [1,1] is the variance of the data in y. This 2D output array is called the covariance matrix, since it organizes the self- and covariance."
@@ -860,8 +910,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "4d5d78d1",
+   "execution_count": 16,
+   "id": "8574edfe",
    "metadata": {},
    "outputs": [
     {
@@ -891,14 +941,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12e4761d",
+   "id": "c93bb1d0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "e5723c40",
+   "id": "5cc51c70",
    "metadata": {},
    "source": [
     "the Pearson correlation coefficient, also called the Pearson r, is often easier to interpret than the covariance. It is computed using the np.corrcoef() function. Like np.cov(), it takes two arrays as arguments and returns a 2D array. Entries [0,0] and [1,1] are necessarily equal to 1 (can you think about why?), and the value we are after is entry [0,1]."
@@ -906,8 +956,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "d767a3f0",
+   "execution_count": 17,
+   "id": "44defd8e",
    "metadata": {},
    "outputs": [
     {
@@ -919,14 +969,6 @@
     }
    ],
    "source": [
-    "def pearson_r(x, y):\n",
-    "    \"\"\"Compute Pearson correlation coefficient between two arrays.\"\"\"\n",
-    "    # Compute correlation matrix: corr_mat\n",
-    "    corr_mat = np.corrcoef(x,y)\n",
-    "\n",
-    "    # Return entry [0,1]\n",
-    "    return corr_mat[0,1]\n",
-    "\n",
     "# Compute Pearson correlation coefficient for I. versicolor: r\n",
     "r = pearson_r(versicolor_petal_length, versicolor_petal_width)\n",
     "\n",
@@ -937,14 +979,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e4b2110",
+   "id": "327bc589",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7c0cadfc",
+   "id": "ce0a3fd8",
    "metadata": {},
    "source": [
     "# Thinking Probabilistically -- Discrete Variables"
@@ -952,7 +994,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba1470d3",
+   "id": "d0b6434a",
    "metadata": {},
    "source": [
     "a Bernoulli trial as a flip of a possibly biased coin. Specifically, each coin flip has a probability  of landing heads (success) and probability  of landing tails (failure). In this exercise, you will write a function to perform n Bernoulli trials,"
@@ -960,33 +1002,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "d77555b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def perform_bernoulli_trials(n, p):\n",
-    "    \"\"\"Perform n Bernoulli trials with success probability p\n",
-    "    and return number of successes.\"\"\"\n",
-    "    # Initialize number of successes: n_success\n",
-    "    n_success = 0\n",
-    "\n",
-    "    # Perform trials\n",
-    "    for i in range(n):\n",
-    "        # Choose random number between zero and one: random_number\n",
-    "        random_nb = np.random.random()\n",
-    "\n",
-    "        # If less than p, it's a success so add one to n_success\n",
-    "        if random_nb < p:\n",
-    "            n_success += 1\n",
-    "\n",
-    "    return n_success"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "e460b013",
+   "execution_count": 18,
+   "id": "02600fb3",
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1038,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e801811",
+   "id": "12acec48",
    "metadata": {},
    "source": [
     "If interest rates are such that the bank will lose money if 10 or more of its loans are defaulted upon, what is the probability that the bank will lose money?"
@@ -1029,8 +1046,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "f9f55e9d",
+   "execution_count": 19,
+   "id": "b42b8697",
    "metadata": {},
    "outputs": [
     {
@@ -1072,14 +1089,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07a941f7",
+   "id": "6e9c5b7e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "bd2fc8c3",
+   "id": "861cd6b8",
    "metadata": {},
    "source": [
     "## Binomial distribution"
@@ -1087,8 +1104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "f6cc6da2",
+   "execution_count": 20,
+   "id": "a15c8e0f",
    "metadata": {},
    "outputs": [
     {
@@ -1119,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5dbb186",
+   "id": "b317b002",
    "metadata": {},
    "source": [
     "The trick is setting up the edges of the bins to pass to plt.hist() via the bins keyword argument. We want the bins centered on the integers. So, the edges of the bins should be -0.5, 0.5, 1.5, 2.5, ... up to max(n_defaults) + 1.5."
@@ -1127,8 +1144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "0ed97030",
+   "execution_count": 21,
+   "id": "45ce44df",
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87289880",
+   "id": "0a856478",
    "metadata": {},
    "source": [
     "## Poisson Distribution\n",
@@ -1168,8 +1185,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "b07663fc",
+   "execution_count": 22,
+   "id": "ed1eac37",
    "metadata": {},
    "outputs": [
     {
@@ -1207,14 +1224,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e113cb8",
+   "id": "81461140",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "913d2976",
+   "id": "75a77b88",
    "metadata": {},
    "source": [
     "1990 and 2015 featured the most no-hitters of any season of baseball (there were seven). Given that there are on average 251/115 no-hitters per season, what is the probability of having seven or more in a season?"
@@ -1222,8 +1239,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "5d992024",
+   "execution_count": 23,
+   "id": "3c5ba570",
    "metadata": {},
    "outputs": [
     {
@@ -1251,14 +1268,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9ac3ca4",
+   "id": "4700c985",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7f23e149",
+   "id": "26907582",
    "metadata": {},
    "source": [
     "# Thinking Probabilistically -- Continuous Variables"
@@ -1266,7 +1283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e6e9024",
+   "id": "c71958cd",
    "metadata": {},
    "source": [
     "## Normal probability density distribution (PDF)"
@@ -1274,8 +1291,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "1f77289f",
+   "execution_count": 24,
+   "id": "18dd0233",
    "metadata": {},
    "outputs": [
     {
@@ -1309,8 +1326,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "0ae63a10",
+   "execution_count": 25,
+   "id": "0389910d",
    "metadata": {},
    "outputs": [
     {
@@ -1346,14 +1363,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91224eb5",
+   "id": "c71d5363",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "39fcd83d",
+   "id": "bd8faaa5",
    "metadata": {},
    "source": [
     "Since 1926, the Belmont Stakes is a 1.5 mile-long race of 3-year old thoroughbred horses. Secretariat ran the fastest Belmont Stakes in history in 1973. While that was the fastest year, 1970 was the slowest because of unusually wet and sloppy conditions. With these two outliers removed from the data set, compute the mean and standard deviation of the Belmont winners' times. Sample out of a Normal distribution with this mean and standard deviation using the np.random.normal() function and plot a CDF. Overlay the ECDF from the winning Belmont times. Are these close to Normally distributed?"
@@ -1361,8 +1378,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "71345e56",
+   "execution_count": 26,
+   "id": "92a78e1f",
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1489,7 @@
        "4    Phyllis M. Wyeth  2:30.42  Belmont    1.5  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1483,8 +1500,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "7e4496b2",
+   "execution_count": 27,
+   "id": "ac9d44ef",
    "metadata": {},
    "outputs": [
     {
@@ -1516,8 +1533,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "e1a1d157",
+   "execution_count": 28,
+   "id": "0dee79e3",
    "metadata": {},
    "outputs": [
     {
@@ -1540,8 +1557,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "4d512ed9",
+   "execution_count": 29,
+   "id": "0ddd085c",
    "metadata": {},
    "outputs": [
     {
@@ -1580,7 +1597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b658ffe3",
+   "id": "9cb269ad",
    "metadata": {},
    "source": [
     "What are the chances of a horse matching or beating Secretariat's record?"
@@ -1588,8 +1605,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "70b66418",
+   "execution_count": 30,
+   "id": "7638bb84",
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1664,7 @@
        "43  Belmont    1.5  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,8 +1675,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "99425cb9",
+   "execution_count": 31,
+   "id": "34e65d43",
    "metadata": {},
    "outputs": [
     {
@@ -1684,14 +1701,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e81b7237",
+   "id": "9fab866f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7a7799ad",
+   "id": "7e598c95",
    "metadata": {},
    "source": [
     "## Exponential Distribution\n",
@@ -1701,8 +1718,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "36091781",
+   "execution_count": 32,
+   "id": "a412a06c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,8 +1736,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "a1f09109",
+   "execution_count": 33,
+   "id": "68ea6ffe",
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1746,7 @@
        "Text(0, 0.5, 'histogram')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1760,7 +1777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfc18f94",
+   "id": "18c07b46",
    "metadata": {},
    "outputs": [],
    "source": []
